Sunday 2pm version of App

--- a/app/views/artpieces/_form.html.erb
+++ b/app/views/artpieces/_form.html.erb
@@ -1,4 +1,3 @@
-
 <%= form_for @artpiece do |f| %>
   <div>
 
@@ -19,7 +18,9 @@
     </div>
 
     <div class = "field">
-      <%= f.label :painting_id %> <br>
+      <%= f.label :artpiece_id %> <br>
     </div>
 
-</div>
+  </div>
+
+  <%= end %>
