--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ArtCart</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+    <title>ArtCart</title>
+    <h1><br>A Customizable Fine-Art Comissioning Application</br></h1>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 
-<%= yield %>
+  </head>
+  <body>
+    <nav class="navbar navbar-default">
 
-</body>
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", root_path %></li>
+        <% if reproartist_signed_in? %>
+          <li><%= link_to "Sign out", destroy_reproartist_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Sign up", new_reproartist_registration_path %></li>
+          <li><%= link_to "Sign in", new_reproartist_session_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+
+    <p class='notice'><%= notice %></p>
+    <p class='alert'><%= alert %></p>
+    <hr/>
+
+    <%= yield %>
+
+
+  </body>
 </html>
