--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ArtCart</title>
-    <h1><br>A Customizable Fine-Art Comissioning Application</br></h1>
+    <title><strong>ArtCart</strong></title>
+    <h1><strong>ArtCart</strong></h1>
+    <h3><br>A Customizable Fine-Art Comissioning Application</br></h3>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -13,7 +14,7 @@
 
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
         <% if reproartist_signed_in? %>
           <li><%= link_to "Sign out", destroy_reproartist_session_path, method: :delete %></li>
         <% else %>
