--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
     <title><strong>ArtCart</strong></title>
     <h1><strong>ArtCart</strong></h1>
-    <h3><br>A Customizable Fine-Art Comissioning Application</br></h3>
+    <h3>A Customizable Fine-Art Comissioning Application</h3>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
@@ -11,7 +11,6 @@
   </head>
   <body>
     <nav class="navbar navbar-default">
-
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
