--- a/app/views/reproartists/edit.html.erb
+++ b/app/views/reproartists/edit.html.erb
@@ -1,7 +1,4 @@
-<h1> Please Pick the Style of your Expertise </h1>
-
-
-<p> Please Pick the Style of your Expertise </p>
+<h2> Please Pick the Style of your Expertise </2>
 
 <%= form_for @reproartist do |f| %>
   <%= f.label :style %>
