--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,8 +1,15 @@
-<h1> About ArtCart</h1><br>
-<h2> Search and Find your favroite pieces of fine art for commission </h2>
 
+<h3> What is ArtCart?</h3><br>
+<p> ArtCart is a fine art commissions facilitator.
+It works as a marketplace for artists skilled in high level reproduction work
+and patrons seeking to commission and buy skilled and/or personalized
+reproductions of popular fine art. </p>
+<br>
 
-<li> Aritsts, Sign up for an account</li>
-<li> Select your distinctive art specilization and </li>
-<li>  fill in the profile so that users may contact you </li>
-<li> to commission detailed reproductions and/or customizable fine </li>
+<h3> How does ArtCart Work? </h3><br>
+<p> Artists sign up for an account </p>
+  <p> Once they have browsed and selected the
+  browse and select the distinctive art styles and pieces they specialize in,
+  they create their profile. </p>
+<p> Patrons interested in fine art reproductions and personalized interpretations of fine art works
+  browse through the artist profiles and then connect with the artist to create commissions </p>
