Hopefully Final Version of App

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -4,9 +4,8 @@
 It works as a marketplace for artists skilled in high level reproduction work
 and patrons seeking to commission and buy skilled and/or personalized
 reproductions of popular fine art. </p>
-<br>
 
-<h3> How does ArtCart Work? </h3><br>
+<h3> How does ArtCart Work? </h3>
 <p> Artists sign up for an account </p>
   <p> Once they have browsed and selected the
   browse and select the distinctive art styles and pieces they specialize in,
