--- a/app/views/reproartists/edit.html.erb
+++ b/app/views/reproartists/edit.html.erb
@@ -1,4 +1,4 @@
-<h2> Please Pick the Style of your Expertise </2>
+<h2> Please Pick the Style of your Expertise </h2><br>
 
 <%= form_for @reproartist do |f| %>
   <%= f.label :style %>
