--- a/app/views/reproartists/show.html.erb
+++ b/app/views/reproartists/show.html.erb
@@ -1,11 +1,13 @@
 
-<space><p> You have indicated you are a skilled reproductionist of the following styles: </p>
+<h3>You have indicated you are a skilled reproductionist of the following style: </h3><br>
 
-<%= @reproartist.style_id %><br>
-<%= Style.find(@reproartist.style_id).name %><br>
+<center>
+
+<strong><%= Style.find(@reproartist.style_id).name %> Art </strong> <br>
 
 
-<%= Artpiece.find(@reproartist.style_id).image %>
+<%= image_tag  Artpiece.find(@reproartist.style_id).image.url %>
+</center><br>
 
-  <p> Consumers interested in comissioning these styles of art will contact you via: </p>
-  <%= @reproartist.email %>
+  <h4> Consumers interested in comissioning this style of art will contact you via: </h4>
+  <center><%= @reproartist.email %></center>
